# rust-wechaty-monorepo

./: Cargo.toml  README.md  rustfmt.toml
examples/: ding_dong_bot.rs
filebox/: Cargo.toml
wechaty/: Cargo.toml
wechaty-puppet/: Cargo.toml
wechaty-puppet-mock/: Cargo.toml
wechaty-puppet-mock/src/: lib.rs  puppet_mock.rs
wechaty-puppet-service/: Cargo.toml
wechaty-puppet-service/src/: error.rs  from_payload_response.rs  lib.rs  puppet_service.rs  service_endpoint.rs
wechaty-puppet/src/: error.rs  events.rs  lib.rs  puppet.rs  types.rs
wechaty-puppet/src/schemas/: contact.rs  event.rs  friendship.rs  image.rs  message.rs  mini_program.rs  mod.rs  payload.rs  room.rs  room_invitation.rs  url_link.rs
wechaty/src/: context.rs  error.rs  lib.rs  payload.rs  pool.rs  wechaty.rs
wechaty/src/traits/: contact.rs  event_listener.rs  mod.rs
wechaty/src/user/: contact.rs  contact_self.rs  entity.rs  favorite.rs  friendship.rs  message.rs  mini_program.rs  mod.rs  moment.rs  room.rs  room_invitation.rs  url_link.rs
