[package]
name = "wechaty-puppet-mock"
version = "0.1.0"
authors = ["Gabriel Wu <qqbbnease1004@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0-beta.2"
async-trait = "0.1"
wechaty-puppet = { path = "../wechaty-puppet" }