[package]
name = "wechaty-puppet"
version = "0.1.0"
authors = ["Gabriel Wu <qqbbnease1004@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0-beta.2"
futures = "0.3"
log = "0.4"
lru = "0.6.5"
num = "0.3"
num-derive = "0.3"
num-traits = "0.2"
regex = "1"